Rewrote to ProcessBuilder, hoping for less path issues